# django_promocode_test

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
apps/: __init__.py
apps/common/: __init__.py  apps.py  exceptions.py  models.py
apps/orders/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py  __init__.py
apps/orders/tests/: __init__.py  test_services.py  test_views.py
apps/promocodes/: __init__.py  admin.py  apps.py  models.py  services.py
apps/promocodes/migrations/: 0001_initial.py  __init__.py
apps/promocodes/tests/: __init__.py  test_models.py
apps/users/: __init__.py  admin.py  apps.py  models.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
requirements/: base.txt  dev.txt
tests/: __init__.py  conftest.py  factories.py
