[tool.poetry]
name = "django-promocode"
version = "0.1.0"
description = "REST API для создания заказов с применением промокодов"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = ">=5.0,<6.0"
djangorestframework = ">=3.14,<4.0"
psycopg2-binary = ">=2.9,<3.0"
dj-database-url = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-django = ">=4.8"
factory-boy = ">=3.3"
ruff = ">=0.4"
mypy = ">=1.10"
django-stubs = ">=5.0"
djangorestframework-stubs = ">=3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "I001"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["tests.*", "apps.*.tests.*"]
disable_error_code = ["attr-defined", "misc", "arg-type"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
